# Python

./: .gitignore  0-introduccion.md  2-red_neuronal.md  CNAME  README.md  docusaurus.config.js  docusaurus.config.ts  main.py  notas.md  notas.txt  notes.txt  package-lock.json  package.json  pyproject.toml  requirements.txt
data/: maximas.csv  minimas.csv  resumen-covid-pandas.csv
docs/: 02-pandas.md  03-dataviz.md  04-pandas.md  05-dataviz.md  07-dataviz.md  07-streamlit.md  08-datascience.md  autor.md  intro.md
docs/00-introduccion/: 1-introduccion.md  1.0-historia.md  1.1-instalacion.md  1.2-jupyter.md  1.estructura_general.md  2-instalacion.md  2-operadores_basicos.md  3-datos.md  3-tipos de datos.md  3.1-tuplas-listas.md  3.2-Operaciones_basicas_con_datos.md  3.2-cadenas.md  3.3-cadenas.md  4-controles.md  5-funciones.md  5.1-funcioneslambda.md  6-archivos.md  6-modularizacion.md  7-archivos.md  7-excepciones.md  8-archivos.md  _category_.json
docs/00.1-POO/: 1-introduccion.md  (+3 more)
notebooks/: 01-Sentencias Basicas.ipynb  01-archivo-csv.ipynb  01-archivo.ipynb  01-ejercicios.ipynb  01-tipos de datos.ipynb  01.3-tuplas-listas.ipynb  02 - Excepciones.ipynb  02b-Operaciones_basicas_con_datos.ipynb  02c-cadenas.ipynb  04-Sentencias Condicionales.ipynb  05-funciones.ipynb  1.3-Pandas_Analisis_Titanic.ipynb  2-operadores_basicos.ipynb  2.fundamentos.ipynb  3.1-tuplas-listas.ipynb  4-matplotlib.ipynb  Matplotlib.ipynb  Pandas_vs_Polars.ipynb  covid-chile.ipynb  datos_usuario.txt  nuevo-archivo-covit.csv  pandas-datos.ipynb  salarios.ipynb
planes/: visualizacion.md
(+129 files in other folders)
